test/simple/typeerrors/Examples/StatExpr.hs
module StatExpr where

f = do "koe"
